upgrade spring boot version and fixed upgrade issures