@@ -5,17 +5,18 @@ import com.spring.restaurant.backend.security.JwtAuthenticationFilter;
 import com.spring.restaurant.backend.security.JwtAuthorizationFilter;
 import com.spring.restaurant.backend.security.JwtTokenizer;
 import com.spring.restaurant.backend.service.UserService;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
-import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
-import org.springframework.security.config.annotation.method.configuration.EnableGlobalMethodSecurity;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
-import org.springframework.security.config.annotation.web.builders.WebSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.util.matcher.AntPathRequestMatcher;
 import org.springframework.security.web.util.matcher.OrRequestMatcher;
 import org.springframework.security.web.util.matcher.RequestMatcher;
@@ -23,13 +24,13 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
+@Configuration
 @EnableWebSecurity
-@EnableGlobalMethodSecurity(securedEnabled = true)
-public class SecurityConfig extends WebSecurityConfigurerAdapter {
+@EnableMethodSecurity(securedEnabled = true)
+public class SecurityConfig {
 
     private final UserService userService;
     private final PasswordEncoder passwordEncoder;
@@ -37,55 +38,56 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
     private final SecurityProperties securityProperties;
     private final JwtTokenizer jwtTokenizer;
 
-    @Autowired
     public SecurityConfig(UserService userService,
                           PasswordEncoder passwordEncoder,
-                          SecurityProperties securityProperties, JwtTokenizer jwtTokenizer) {
+                          SecurityProperties securityProperties,
+                          JwtTokenizer jwtTokenizer) {
         this.userService = userService;
-        this.securityProperties = securityProperties;
         this.passwordEncoder = passwordEncoder;
+        this.securityProperties = securityProperties;
         this.jwtTokenizer = jwtTokenizer;
 
-        this.whiteListedRequests = new OrRequestMatcher(securityProperties.getWhiteList().stream()
-            .map(AntPathRequestMatcher::new)
-            .collect(Collectors.toList()));
+        this.whiteListedRequests = new OrRequestMatcher(
+            securityProperties.getWhiteList().stream()
+                .map(AntPathRequestMatcher::new)
+                .collect(Collectors.toList())
+        );
     }
 
-    @Override
-    protected void configure(HttpSecurity http) throws Exception {
-        http.cors().and()
-            .csrf().disable()
-            .authorizeRequests()
-            .anyRequest().authenticated()
-            .and()
-            .addFilter(new JwtAuthenticationFilter(authenticationManager(), securityProperties, jwtTokenizer))
-            .addFilter(new JwtAuthorizationFilter(authenticationManager(), securityProperties))
-            .sessionManagement()
-            .sessionCreationPolicy(SessionCreationPolicy.STATELESS);
+    @Bean
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration authenticationConfiguration) throws Exception {
+        return authenticationConfiguration.getAuthenticationManager();
     }
 
-    @Override
-    public void configure(WebSecurity web) {
-        web.ignoring().requestMatchers(whiteListedRequests);
-    }
+    @Bean
+    public SecurityFilterChain securityFilterChain(HttpSecurity http, AuthenticationManager authManager) throws Exception {
+        http.cors(cors -> cors.configurationSource(corsConfigurationSource()))
+            .csrf(AbstractHttpConfigurer::disable)
+            .authorizeHttpRequests(auth -> auth
+                .requestMatchers(whiteListedRequests).permitAll()
+                .anyRequest().authenticated()
+            )
+            .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+            .addFilter(new JwtAuthenticationFilter(authManager, securityProperties, jwtTokenizer))
+            .addFilter(new JwtAuthorizationFilter(authManager, securityProperties));
 
-    @Override
-    protected void configure(AuthenticationManagerBuilder auth) throws Exception {
-        auth.userDetailsService(userService).passwordEncoder(passwordEncoder);
+        return http.build();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        final List<String> permitAll = Collections.unmodifiableList(Collections.singletonList("*"));
-        final List<String> permitMethods = List.of(HttpMethod.GET.name(), HttpMethod.POST.name(), HttpMethod.PUT.name(),
-            HttpMethod.PATCH.name(), HttpMethod.DELETE.name(), HttpMethod.OPTIONS.name(), HttpMethod.HEAD.name(),
-            HttpMethod.TRACE.name());
-        final CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedHeaders(permitAll);
-        configuration.setAllowedOrigins(permitAll);
-        configuration.setAllowedMethods(permitMethods);
-        final UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
+        CorsConfiguration config = new CorsConfiguration();
+        config.setAllowedHeaders(List.of("*"));
+        config.setAllowedOrigins(List.of("*"));
+        config.setAllowedMethods(List.of(
+            HttpMethod.GET.name(), HttpMethod.POST.name(),
+            HttpMethod.PUT.name(), HttpMethod.PATCH.name(),
+            HttpMethod.DELETE.name(), HttpMethod.OPTIONS.name()
+        ));
+
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", config);
         return source;
     }
 }
+
